--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "worthless-package",
   "version": "1.0.0",
   "description": "A worthless package written purely to see how NPM packages are created.",
-  "main": "src/index.tsx",
+  "exports": {
+    ".": "./src/index.tsx",
+    "./silly": "./src/silly.tsx"
+  },
   "author": "Alex Murray <make.money.fast@gmail.com>",
   "license": "MIT",
   "private": false,
